tests/fixtures/errors/bare_iterator_binding.z
# E0300: iterators are produced by their source, not constructed.
main: function is {
    it: CpIter
    print "iter"
}
